
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added
- [FRONTEND] New last_update_time field
- [GUI] [WORKFLOW] CORS policy settings
- [HAPROXY] [CONF] CORS policy into config generation
### Removed
- [FRONTEND] [TIMEOUTS] Incoherent "timeout connect" in Frontend attributes
### Changed
- [HAPROXY] [CONF] Split Frontend and Workflow config to improve performance
- [HAPROXY] [CONF] Change test config names by uuids
- [PERFORMANCES] Avoid high overhead when loading Workflows by simplifying string representation
### Fixed
- [GUI] [FRONTEND] Bug allowing the creation of an http or tcp frontend without a listener
- [LOG_FORWARDER] Rsyslog config generation error when '-' found in LOGOM name
- [LOG_FORWARDER] Frontends configs aren't refreshed when LOGOM used as parse failure
- [WORKFLOW] Re-allow multiple workflows on the same FQDN with sub-paths
- [HAPROXY] Ensure X-Forwarded-proto header is correctly set on Frontend configuration
- [API_PARSER] [NOZOMI] Set correct timestamp format for query limits


## [2.12.1] - 2023-11-16
### Fixed
- [API] [BACKEND] Broken API URL
- [API] [WORKFLOW] Do not error on Workflow creation through API
- [SYSTEM] [USERS] Change password of an existing user


## [2.12.0] - 2023-11-15
### Added
- [API_PARSER] [VECTRA] New parser Vectra
- [MANAGE] [COMMANDS] New command get_api_key
- [OPENID] [CONNECTOR] New JWT validation parameters
- [OAUTH2] [USERINFO] Allow to validate JWT in /userinfo with new OpenID connector's parameters
### Changed
- [API_PARSER] [MS_SENTINEL] timeGenerated -> processingEndTime and incident.id -> incident.name
- [DEPENDENCIES] Python dependencies upgrade
  - aiohttp 3.8.5 -> 3.8.6
  - boto3 1.28.52 -> 1.28.68
  - botocore 1.31.52 -> 1.31.68
  - cffi 1.15.1 -> 1.16.0
  - charset-normalizer 3.2.0 -> 3.3.1
  - django 3.2.22 -> 4.2.6
  - djongo pypi -> VultureProject